--- a/style.css
+++ b/style.css
@@ -6,30 +6,77 @@
     box-sizing: border-box;
     font-family: Rubik, sans-serif;
 }
+:root{
+    --primary:#222;
+    --secondary:#fff;
+    --danger:#e62c4b;
+    --success:#2fda54;
+    --warning:#eeab2d;
+    --blue:#4e5ef0;
+}
+.header{
+    height: 60px;
+    background-color: var(--primary);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:5px 10px;
+}
+.header .restart-icon{
+    height: 35px;
+    width: 35px;
+    line-height: 35px;
+    padding: unset;
+    margin: unset;
+    margin-left: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+.header .timer{
+    display: none;
+    width: 35px;
+    height: 35px;
+    background-color: var(--success);
+    border-radius: 100%;
+    text-align: center;
+    line-height: 35px;
+    font-size: 17px;
+    color: var(--secondary);
+    position: relative;
+    overflow: hidden;
+}
+
+.timer::before{
+    content:'';
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
 .container{
     width:100%;
-    min-height: 100vh;
-    background:#222;
+    min-height: calc(100vh - 60px);
+    background:var(--primary);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    padding:40px 0;
 }
 .head{
-    font-size: 70px;
-    margin: 30px 0;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 60px;
+    margin: 20px 0;
+    color: var(--secondary);
     transition: 0.2s;
     text-align: center;
     flex-wrap: wrap;
 }
 .btn{
-    width:100px;
-    height: 100px;
+    width:90px;
+    height: 90px;
     text-align: center;
     border-radius: 100%;
     display: flex;
@@ -38,14 +85,13 @@
     font-size: 30px;
 }
 .init-btn{
-    color: #fff;
-    background-color: #e62c4b;
+    color: var(--secondary);
+    background-color: var(--danger);
 }
 .counter {
     display: none;
-    background-color: #0faf6c;
-    color:#fff;
-    margin-left:25px;
+    color:var(--secondary);
+    margin-bottom: 25px;
 }
 .board{
     display: grid;
@@ -56,59 +102,69 @@
     position: relative;
     width:75px;
     height: 75px;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 50px;
     font-family: sans-serif;
     border-radius: 10px;
-    overflow: hidden;
-    perspective: 1000px;
+    transform-style: preserve-3d;
+    perspective: 150px;
 }
-.hidden {
-    transform:rotateZ(90deg);
+
+.content{
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    position: relative;
+    transition: 0.5s;
+    transform:rotateY(0deg)
 }
-.hidden::before{
-    content:'';
+
+.front, .back{
     position: absolute;
     top:0;
     left:0;
-    width:100%;
+    width: 100%;
     height: 100%;
-    background-color: dodgerblue;
-    transform-style: preserve-3d;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blue);
+    backface-visibility: hidden;
+}
+.front {
+    background: url('flipover.png') var(--blue) no-repeat;
+    background-position: center;
+    background-size: 50%;
+    transform: rotateY(180deg);
+}
+.back{
+    background-color: var(--secondary);
+}
+
+
+.hidden .content{
+    transform:rotateY(180deg);
 }
 #score{
-    width:100px;
-    height: 45px;
-    line-height: 45px;
-    background-color: orange;
-    color: #fff;
-    font-size: 35px;
+    width:70px;
+    height: 35px;
+    line-height: 35px;
+    background-color: var(--warning);
+    color: var(--secondary);
+    font-size: 17px;
     text-align: center;
     border-radius: 10px;
-    position: absolute;
-    top:10px;
-    right: 10px;
     display: none;
 }
-.fixed{
-    top:10px;
-    left: 10px;
-    position: absolute;
-    margin: 0 !important;
-}
+
 #gameover{
-    width:100%;
-    background-color:#ffffffea;
+    width:90%;
+    background-color:var(--secondary);
     min-height: 100px;
     max-width: 500px;
     border-radius: 20px;
     padding:20px 15px;
     text-align: center;
-    border:5px solid #6521e4;
-    color: #6521e4;
     display: none;
     position: absolute;
     top:50%;
@@ -117,8 +173,8 @@
 }
 
 .restart{
-    color:#fff;
-    background-color: #e62c4b;
+    color:var(--secondary);
+    background-color: var(--danger);
     font-size: 25px;
     border-radius: 10px;
     width:fit-content;
@@ -139,11 +195,24 @@
         font-size: 55px;
     }
     .board{
-        grid-template-columns: repeat(4,1fr);
+        gap:6px
+    }
+    .box{
+        width:45px;
+        height: 45px;
+        font-size: 25px;
     }
     .btn{
         width:75px;
         height: 75px;
+        font-size: 20px;
+    }
+}
+
+@media(max-width:320px){
+    .box{
+        width:40px;
+        height: 40px;
         font-size: 20px;
     }
 }
