--- a/style.css
+++ b/style.css
@@ -64,11 +64,11 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding:40px 0;
+    padding:30px 0;
 }
 .head{
     font-size: 60px;
-    margin: 20px 0;
+    margin-bottom: 20px;
     color: var(--secondary);
     transition: 0.2s;
     text-align: center;
@@ -115,7 +115,7 @@
     transform-style: preserve-3d;
     position: relative;
     transition: 0.5s;
-    transform:rotateY(0deg)
+    border-radius: 10px;
 }
 
 .front, .back{
@@ -145,6 +145,19 @@
 .hidden .content{
     transform:rotateY(180deg);
 }
+.removed .content{
+    animation: shrink ease-in 0.3s forwards;
+}
+
+@keyframes shrink {
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
+}
+
 #score{
     width:70px;
     height: 35px;
